Ported to CentOS 6.5 with libgtk 2.24.23

--- a/iup/Makefile
+++ b/iup/Makefile
@@ -1,7 +1,15 @@
 
+# quick decision which GTK is available
+ifndef  USE_GTK
+  gtkver := $(shell pkg-config gtk+-3.0 --cflags)
+  ifeq ($(gtkver), )
+    export USE_GTK=1
+  endif
+endif
+
 .PHONY: do_all iup iupgtk iupcd iupcontrols iupgl iup_pplot iupim iupimglib ledc iupview iuplua3 iuplua5 iupconsole
 #do_all: iup iupgtk iupcd iupcontrols iupgl iup_pplot iupim iupimglib ledc iupview iuplua3 iuplua5 iupconsole
-do_all: iup iupgtk iupcd iupcontrols iupgl iup_pplot iupim iupimglib ledc iupview iuplua5 iupconsole
+do_all: iup iupgtk iupimglib 
 
 iup iupgtk:
 	@$(MAKE) --no-print-directory -C ./src/ $@
@@ -16,10 +24,10 @@ iupgl:
 iupim:
 	@$(MAKE) --no-print-directory -C ./srcim/
 iupimglib:
-	@$(MAKE) --no-print-directory -C ./srcimglib/
+	@$(MAKE) USE_IUP_IMGLIB_LARGE=1 --no-print-directory -C ./srcimglib/
 iuplua3:
 	@$(MAKE) --no-print-directory -C ./srclua3/
-iuplua5:
+iuplua5: 
 	@$(MAKE) --no-print-directory -C ./srclua5/
 iupconsole:
 	@$(MAKE) --no-print-directory -C ./srcconsole/
@@ -27,3 +35,6 @@ ledc:
 	@$(MAKE) --no-print-directory -C ./srcledc/
 iupview: iupcontrols iup
 	@$(MAKE) --no-print-directory -C ./srcview/
+
+clean:
+	rm -rf ./lib/* ./obj/*
