Ported to Debian 9 with libgtk 2.24.31. Removed some warnings about type convert from 32bit to 64bit.

--- a/iup/Makefile
+++ b/iup/Makefile
@@ -1,9 +1,19 @@
 ifeq ($(OS), Windows_NT)
   WINLIBS = iupole
+  export MINGW4=/c/mingw
+  export TEC_UNAME=mingw4
+endif
+
+# quick decision of which GTK is available
+ifndef  USE_GTK2
+  gtkver := $(shell pkg-config gtk+-3.0 --cflags)
+  ifeq ($(gtkver), )
+    export USE_GTK2=1
+  endif
 endif
 
 .PHONY: do_all iup iupgtk iupmot iupcd iupcontrols iupgl iupglcontrols iup_plot iup_mglplot iup_scintilla iupim iupimglib ledc iupview iuplua5 iupluaconsole iupluascripter iupole iupweb iuptuio
-do_all: iup iupcd iupcontrols iupgl iupglcontrols iup_plot iup_mglplot iup_scintilla iupim iupimglib $(WINLIBS) iupweb iuptuio ledc iupview iuplua5 iupluaconsole iupluascripter
+do_all: iup iupimglib $(WINLIBS)
 
 iup iupgtk iupmot:
 	@$(MAKE) --no-print-directory -C ./src/ $@
@@ -30,7 +40,7 @@ iupweb:
 iuptuio:
 	@$(MAKE) --no-print-directory -C ./srctuio/
 iupimglib:
-	@$(MAKE) --no-print-directory -C ./srcimglib/
+	@$(MAKE) USE_IUP_IMGLIB_LARGE=1 --no-print-directory -C ./srcimglib/
 iuplua5:
 	@$(MAKE) --no-print-directory -C ./srclua5/
 iupluaconsole:
@@ -41,3 +51,10 @@ ledc:
 	@$(MAKE) --no-print-directory -C ./srcledc/
 iupview: iupcontrols iup
 	@$(MAKE) --no-print-directory -C ./srcview/
+
+clean:
+	rm -rf ./lib/* ./obj/* VERSION.gtk
+
+cleanall: clean
+	rm -rf src/iup.dep srcimglib/iupimglib.dep
+
