--- a/iup/Makefile
+++ b/iup/Makefile
@@ -1,9 +1,25 @@
 ifeq ($(OS), Windows_NT)
   WINLIBS = iupole iupfiledlg
+  export MINGW4=/c/mingw
+  export TEC_UNAME=mingw4
 endif
 
+# quick decision which GTK is available
+ifndef  USE_GTK2
+gtkver := $(shell pkg-config gtk+-3.0 --cflags)
+ifeq ($(gtkver), )
+  export USE_GTK2=1
+endif
+endif
+
+
 .PHONY: do_all iup iupgtk iupmot iupcd iupcontrols iupgl iupglcontrols iup_plot iup_mglplot iup_scintilla iupim iupimglib ledc iupview iupvled iuplua5 iupluaconsole iupluascripter iupole iupfiledlg iupweb iuptuio
-do_all: iup iupcd iupcontrols iupgl iupglcontrols iup_plot iup_mglplot iup_scintilla iupim iupimglib $(WINLIBS) iupweb iuptuio ledc iupview iupvled iuplua5 iupluaconsole iupluascripter
+do_all: iup iupimglib $(WINLIBS)
+	cp ./lib/*/*.a ./lib
+
+clean:
+	rm -rf ./lib/* ./obj/* ./src/iup.dep ./srcimglib/iupimglib.dep
+
 
 iup iupgtk iupmot:
 	@$(MAKE) --no-print-directory -C ./src/ $@
