Committed the IUP 3.31 modified.

--- a/iup/Makefile
+++ b/iup/Makefile
@@ -1,5 +1,26 @@
 ifeq ($(OS), Windows_NT)
   WINLIBS = iupole iupfiledlg
+  export MINGW4=/c/mingw
+  export TEC_UNAME=mingw4
+endif
+
+# Quick decision which GTK is available
+# By the way please add "STDINCS += $(GTK)/include/harfbuzz" in tecmake.mak:1400
+#    ifdef LINK_CAIRO
+#      LIBS += pangocairo-1.0 cairo
+#    endif
+#    ...
+#    STDINCS += $(GTK)/include/atk-1.0 $(GTK)/include/gtk-$(GTKSFX).0 $(GTK)/include/gdk-pixbuf-2.0
+#    STDINCS += $(GTK)/include/cairo $(GTK)/include/pango-1.0 $(GTK)/include/glib-2.0
+#    STDINCS += /usr/include/harfbuzz
+#
+ifndef  USE_GTK2
+  gtkver := $(shell pkg-config gtk+-3.0 --cflags)
+  ifeq ($(gtkver), )
+    export USE_GTK2=1
+  else
+    export USE_GTK3=1
+  endif
 endif
 
 TARGETS := iup iupcd iupcontrols iupgl iupglcontrols iup_plot iup_mglplot iup_scintilla iupim iupimglib $(WINLIBS) iupweb iuptuio ledc iupview iupvled iuplua5 iupluaconsole iupluascripter
@@ -7,7 +28,11 @@ TARGETS := $(filter-out $(EXCLUDE_TARGETS), $(TARGETS))
 OTHERDEPENDENCIES := iupgtk iupmot
 
 .PHONY: do_all $(TARGETS) $(OTHERDEPENDENCIES)
-do_all: $(TARGETS)
+do_all: iup iupimglib $(WINLIBS)
+
+clean:
+	rm -rf lib obj src/dep
+	rm -f srcimglib/iupimglib.dep
 
 iup iupgtk iupmot:
 	@$(MAKE) --no-print-directory -C ./src/ $@
